# codex-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  compose.yaml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SECURITY.md
python-runtime/: pyproject.toml
scripts/: codex-runtime.sh  hash-password.mjs  migrate-tenant-permissions.sh  run-local.ps1  run-python-task.ps1  run-python-task.sh  setup-python.ps1  setup-python.sh  start-supervisor.sh
server/: agent-context.ts  app-server-turn.ts  app.ts  cancellation-summary.ts  codex-events.ts  codex-runner.ts  config.ts  db.ts  index.ts  managed-skills.ts  model-options.ts  optional-capabilities.ts  paths.ts  python-runtime.ts  retry-policy.ts  supervisor.ts  task-policy.ts  tenant-identities.ts  tenant-worker-client.ts  tenant-worker-execution.ts  tenant-worker-protocol.ts  tenant-worker.ts  transcription.ts
skills/local-spreadsheets/: SKILL.md
skills/local-spreadsheets/agents/: openai.yaml
skills/local-spreadsheets/scripts/: workbook_qa.py
src/: App.tsx  account-identity.ts  agent-content.ts  api.ts  ask-agent-selection.ts  chat-font-size.ts  composer-action.ts  file-links.ts  main.tsx  message-history.ts  process-journal.ts  recovery.ts  rollout-capacity.ts  scroll-follow.ts  styles.css  theme.ts
tests/: app.test.ts  transcription.test.ts
