[project]
name = "codex-web-runtime"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beautifulsoup4>=4.13,<5",
  "lxml>=5.4,<7",
  "matplotlib>=3.10,<4",
  "openpyxl>=3.1,<4",
  "pandas>=2.3,<4",
  "pdfplumber>=0.11,<1",
  "pillow>=11,<13",
  "pypdf>=5,<7",
  "python-docx>=1.2,<2",
  "python-pptx>=1.0,<2",
  "reportlab>=4.4,<5",
  "requests>=2.32,<3",
  "xlsxwriter>=3.2,<4",
]

[tool.uv]
package = false
